@@ -4,11 +4,11 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.5
+	yarn_mappings=1.16.3+build.7
 	loader_version=0.9.3+build.207
 
 # Mod Properties
-	mod_version = 1.3.3
+	mod_version = 1.3.4
 	maven_group = net.fabricmc
 	archives_base_name = Age-Of-Exile-1.16.3
 
