@@ -9,22 +9,22 @@ mmorpg:armor/plate/pants/plate_pants4
 mmorpg:armor/plate/pants/plate_pants3
 mmorpg:uniques/weapon/obsi_might
 mmorpg:weapon/wand/scepter3
-mmorpg:jewelry/ring/poison_res_ring_low
 mmorpg:weapon/wand/scepter2
+mmorpg:jewelry/ring/poison_res_ring_low
 mmorpg:weapon/wand/scepter4
 mmorpg:jewelry/ring/cold_res_ring_end
 mmorpg:jewelry/necklace/life_necklace0
-mmorpg:weapon/wand/scepter1
 mmorpg:jewelry/necklace/life_necklace1
+mmorpg:weapon/wand/scepter1
 mmorpg:weapon/wand/scepter0
 mmorpg:jewelry/ring/fire_res_ring_end
 mmorpg:armor/leather/pants/leather_pants0
 mmorpg:jewelry/ring/thunder_res_ring_low
-mmorpg:armor/leather/pants/leather_pants3
 mmorpg:uniques/armor/exec_pride
+mmorpg:armor/leather/pants/leather_pants3
 mmorpg:armor/leather/pants/leather_pants4
-mmorpg:armor/leather/pants/leather_pants1
 mmorpg:uniques/weapon/will_of_flora
+mmorpg:armor/leather/pants/leather_pants1
 mmorpg:armor/leather/pants/leather_pants2
 mmorpg:uniques/armor/beast_blood
 mmorpg:uniques/jewelry/greed_persist
@@ -35,27 +35,27 @@ mmorpg:armor/leather/helmet/leather_helmet2
 mmorpg:armor/leather/helmet/leather_helmet1
 mmorpg:uniques/armor/inner_conflux
 mmorpg:uniques/jewelry/skull_of_spirits
-mmorpg:armor/cloth/helmet/cloth_helmet2
 mmorpg:armor/cloth/boots/cloth_boots1
-mmorpg:armor/cloth/helmet/cloth_helmet1
+mmorpg:armor/cloth/helmet/cloth_helmet2
 mmorpg:armor/cloth/boots/cloth_boots2
-mmorpg:armor/cloth/helmet/cloth_helmet0
+mmorpg:armor/cloth/helmet/cloth_helmet1
 mmorpg:armor/cloth/boots/cloth_boots3
+mmorpg:armor/cloth/helmet/cloth_helmet0
 mmorpg:armor/cloth/boots/cloth_boots4
 mmorpg:armor/cloth/helmet/cloth_helmet4
 mmorpg:armor/cloth/helmet/cloth_helmet3
 mmorpg:armor/leather/chest/leather_chest1
 mmorpg:armor/leather/chest/leather_chest2
 mmorpg:armor/leather/boots/leather_boots3
+mmorpg:armor/leather/boots/leather_boots4
 mmorpg:armor/leather/chest/leather_chest0
 mmorpg:uniques/jewelry/angel_prot_necklace
-mmorpg:armor/leather/boots/leather_boots4
 mmorpg:armor/leather/boots/leather_boots1
 mmorpg:armor/leather/boots/leather_boots2
 mmorpg:armor/leather/chest/leather_chest3
-mmorpg:armor/leather/boots/leather_boots0
 mmorpg:armor/cloth/boots/cloth_boots0
 mmorpg:armor/leather/chest/leather_chest4
+mmorpg:armor/leather/boots/leather_boots0
 mmorpg:armor/cloth/chest/cloth_chest0
 mmorpg:armor/cloth/chest/cloth_chest3
 mmorpg:armor/cloth/chest/cloth_chest4
@@ -71,13 +71,13 @@ mmorpg:uniques/weapon/divine_might
 mmorpg:jewelry/ring/mana_reg_ring1
 mmorpg:armor/plate/helmet/plate_helmet3
 mmorpg:armor/plate/helmet/plate_helmet4
-mmorpg:armor/plate/helmet/plate_helmet1
 mmorpg:weapon/wand/wand2
-mmorpg:armor/plate/helmet/plate_helmet2
+mmorpg:armor/plate/helmet/plate_helmet1
 mmorpg:weapon/wand/wand3
+mmorpg:armor/plate/helmet/plate_helmet2
 mmorpg:weapon/wand/wand0
-mmorpg:armor/plate/helmet/plate_helmet0
 mmorpg:weapon/wand/wand1
+mmorpg:armor/plate/helmet/plate_helmet0
 mmorpg:armor/plate/chest/plate_chest0
 mmorpg:weapon/axe/axe0
 mmorpg:uniques/weapon/inca_thunder
@@ -98,14 +98,14 @@ mmorpg:armor/cloth/pants/cloth_pants2
 mmorpg:armor/plate/boots/plate_boots4
 mmorpg:uniques/weapon/water_ele_sword
 mmorpg:weapon/sword/sword4
-mmorpg:armor/plate/chest/plate_chest3
 mmorpg:weapon/sword/sword3
-mmorpg:armor/plate/chest/plate_chest4
+mmorpg:armor/plate/chest/plate_chest3
 mmorpg:weapon/sword/sword2
-mmorpg:armor/plate/chest/plate_chest1
+mmorpg:armor/plate/chest/plate_chest4
 mmorpg:weapon/sword/sword1
-mmorpg:armor/plate/chest/plate_chest2
+mmorpg:armor/plate/chest/plate_chest1
 mmorpg:weapon/sword/sword0
+mmorpg:armor/plate/chest/plate_chest2
 mmorpg:uniques/jewelry/loop_of_infinity
 mmorpg:jewelry/necklace/all_res_necklace0
 mmorpg:jewelry/necklace/all_res_necklace1
